Add logos to r p s

--- a/style.css
+++ b/style.css
@@ -18,10 +18,13 @@ body{
     padding: 15px;
     background-color: rgb(188, 143, 229);
     box-shadow: 1px 2px 2px 2px rgb(16, 9, 22);
-    color: rgb(238, 231, 231);
-    font-size: 1.3rem;
+    width: 85px;
+    height: 85px;
+    /* color: rgb(238, 231, 231); */
+    /* font-size: 1.3rem; */
     margin: 10px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-sizing: border-box;
+    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
 .button:hover{
     background-color: rgb(149, 88, 206);
@@ -39,4 +42,16 @@ body{
 .score{
     font-size: 3rem;
     color:rgb(139, 30, 94)
+}
+.rock{
+    background: rgb(188, 143, 229) url("576564.svg") no-repeat center;
+    background-size: 40px;
+}
+.paper{
+    background: rgb(188, 143, 229) url("34910.svg") no-repeat center;
+    background-size: 40px;
+}
+.scissors{
+    background: rgb(188, 143, 229) url("1332795.svg") no-repeat center;
+    background-size: 50px;
 }
